my first commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ logging.level.org.hibernate.SQL= DEBUG
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
+
+
+## thymeleaf configurations...........
+spring.thymeleaf.mode = LEGACYHTML5
+spring.thymeleaf.cache = false
+ 
